# RemoteJoyLite

./: 60-psp-b-usb.rules  Dockerfile  build_podman.sh  remotejoy.h  script
.github/workflows/: build.yml  build_sdl.yml
RemoteJoyLite_js/: index.html  main.js  style.css  usbthread.js
RemoteJoyLite_pc/: Bitmap.cpp  DebugFont.cpp  Direct3D.cpp  DirectInput.cpp  DirectInput.h  FontData_5x5.cpp  Macro.cpp  Makefile  Movie.cpp  RemoteJoyLite.cpp  RemoteJoyLite.h  Setting.cpp  Setting.h  Setting_Capt.cpp  Setting_Etc.cpp  Setting_Filt.cpp  Setting_Joy.cpp  Setting_Key.cpp  Setting_Macro.cpp  Setting_PSP.cpp  Wave.cpp  WinMain.cpp
RemoteJoyLite_psp/: Makefile  RemoteJoyLite.c  debug.c  debug.h  hen.S  hook.h  hook_ctrl.c  hook_display.c  hook_impose.c  hook_impose.h  hook_interrupt.c  hook_usb.c  hook_usb.h  sceUsbBus_driver.S  sceUsb_driver.S  usb.c
RemoteJoyLite_sdl/: CMakeLists.txt  README.md
RemoteJoyLite_sdl/src/: main.c
dxvk-2.5.2/: README
dxvk-2.5.2-aarch64/: README
linux_libusb/: README
linux_scripts/: start_linux.sh
